--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@heroicons/react": "^2.1.5",
     "@material-tailwind/react": "^2.1.9",
+    "frontend": "file:",
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18",
