--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,10 +16,13 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@heroicons/react": "^2.1.5",
     "@material-tailwind/react": "^2.1.9",
+    "@types/nodemailer": "^6.4.15",
     "frontend": "file:",
     "next": "14.2.5",
+    "nodemailer": "^6.9.15",
     "react": "^18",
     "react-dom": "^18",
+    "react-hook-form": "^7.53.0",
     "react-icons": "^5.2.1",
     "react-router-dom": "^6.26.0"
   },
